web-debug/service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-debug-svc
spec:
  selector:
    app: web-debug
  ports:
    - port: 443
      targetPort: 8080
