web-debug/gw.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: web-debug-gw
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 443
        name: https-web-debug
        protocol: HTTPS
      tls:
        mode: SIMPLE
        serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
        privateKey: /etc/istio/ingressgateway-certs/tls.key
      hosts:
        - "web-debug.example.com"
