web-debug/vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-debug-vs
spec:
  hosts:
    - "web-debug.example.com"
  gateways:
    - web-debug-gw
  http:
    - route:
        - destination:
            host: web-debug-svc.default.svc.cluster.local
            port:
              number: 443
